--- a/txt2speech.html
+++ b/txt2speech.html
@@ -4,6 +4,6 @@
     <button id="speakBtn">Speak please</button>
     <label><input type="checkbox" id="multipleXHRChk" checked="checked" />Mutiple XHR</label>
     <script src="BingTTSClient.js"></script>
-    <script src="index.js"></script>
+    <script src="txt2speech_test.js"></script>
 </body>
 </html>
