--- a/txt2speech.html
+++ b/txt2speech.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <body>
     <button id="speakBtn">Speak please</button>
     <label><input type="checkbox" id="multipleXHRChk" checked="checked" />Mutiple XHR</label>
