--- a/txt2speech.html
+++ b/txt2speech.html
@@ -2,6 +2,11 @@
 <html lang="ja">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <body>
+    <br/>
+    line1:"how are you"<br/>
+    <br/>
+    line2:"天気がいいから、散歩しましょう"<br/>
+    <br/>
     <button id="speakBtn">Speak please</button>
     <label><input type="checkbox" id="multipleXHRChk" checked="checked" />Mutiple XHR</label>
     <script src="BingTTSClient.js"></script>
